--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,10 @@
     ],
     "require": {
         "phing/phing": "^2.12"
+    },
+    "require-dev": {
+        "behat/behat": "^3.0",
+        "behat/mink-goutte-driver": "^1.2",
+        "behat/mink-extension": "^2.1"
     }
 }
