--- a/build.xml
+++ b/build.xml
@@ -1,54 +1,81 @@
-<project name="pharmagest" default="help" basedir=".">
-    <property file="./build.properties" />
-    <target name="help" description="List available target">
+<project name="continuous-delivery" default="help" basedir=".">
+    <if>
+        <available file="${project.basedir}/build.local.properties" />
+        <then>
+            <property file="${project.basedir}/build.local.properties" />
+        </then>
+    </if>
+    <property file="${project.basedir}/build.properties" />
 
+    <import file="${project.basedir}/vendor/continuousphp/aws-sdk-phing/tasks.xml" />
 
-        <echo msg="Création de la base : " />
+    <target name="setup-aws">
+        <aws-config region="${aws-region}" profile="{aws.profile}" />
+    </target>
+
+    <target name="run-stack">
+        <aws-ccf-runstack
+                name="training${cf.stackname}"
+                updateOnConflict="true"
+                capabilities="CAPABILITY_IAM"
+                templatePath="./infrasingle-server.template" >
+            <param name="KeyName" value="${cf.KeyName}" />
+            <param name="env" value="${cf.stackName}" />
+        </aws-ccf-runstack>
+    </target>
+
+    <target name="help" description="List available targets">
+        <exec executable="${project.basedir}/vendor/bin/phing"
+              passthru="true">
+            <arg value="-l"/>
+        </exec>
+    </target>
+
+    <target name="init-db" description="Create Database and Grants">
         <echo file="${project.basedir}/resources/data/create-db.sql">
             CREATE DATABASE IF NOT EXISTS ${db.name};
         </echo>
-        <trycatch property="error">
-            <try>
-                <pdosqlexec url="mysql:host=${db.host}" userid="${db.user}" password="${db.password}">
-                    <transaction src="${project.basedir}/resources/data/create-db.sql"></transaction>
-                </pdosqlexec>
-            </try>
-            <catch>
-                <echo message="${error}" />
-            </catch>
-        </trycatch>
 
-
-        <echo msg="Création de la table changelog : " />
-        <pdosqlexec url="mysql:host=${db.host}" userid="${db.user}" password="${db.password}">
-            <transaction src="${project.basedir}/resources/data/db.sql"></transaction>
+        <pdosqlexec url="mysql:host=${db.host}"
+                    userid="${db.user}"
+                    password="${db.password}">
+            <transaction src="${project.basedir}/resources/data/create-db.sql"/>
         </pdosqlexec>
 
-        <dbdeploy
-                url="mysql:host=${db.host};dbname=${db.name}"
-                userid="${db.user}"
-                password="${db.password}"
-                dir="${project.basedir}/resources/data/deltas"
-                outputfile="${project.basedir}/build/deploy.sql"
-                undooutputfile="${project.basedir}/build/undo.sql" />
-
-        <echo msg="Deploying changes" />
-        <if>
-            <equals arg1="${db.password}" arg2="" />
-            <then>
-                <exec
-                    command="/usr/bin/mysql -h${db.host} -u${db.user} ${db.name} &lt; deploy.sql"
-                    dir="${project.basedir}/build"
-                    checkreturn="true" />
-            </then>
-            <else>
-                <exec
-                    command="/usr/bin/mysql -h${db.host} -u${db.user} -p${db.password} ${db.name} &lt; deploy.sql"
-                    dir="${project.basedir}/build"
-                    checkreturn="true" />
-            </else>
-        </if>
-
+        <delete file="${project.basedir}/resources/data/create-db.sql" quiet="true"/>
     </target>
 
+    <target name="migrate"
+            depends="init-db"
+            description="Migrate db to the actual state">
+
+        <pdosqlexec url="mysql:host=${db.host};dbname=${db.name}"
+                    userid="${db.user}"
+                    password="${db.password}">
+            <transaction src="${project.basedir}/resources/data/db.sql"/>
+        </pdosqlexec>
+
+        <!-- generate the deployment scripts -->
+        <dbdeploy url="mysql:host=${db.host};dbname=${db.name}"
+                  userid="${db.user}"
+                  password="${db.password}"
+                  dir="${project.basedir}/resources/data/deltas"
+                  outputfile="/tmp/dbdeploy_deploy.sql"
+                  undooutputfile="/tmp/dbdeploy_undo.sql" />
+
+        <!-- execute the SQL -->
+        <if>
+            <equals arg1="${db.password}"
+                    arg2="" />
+            <then>
+                <exec command="mysql -u${db.user} -h${db.host} ${db.name} &lt; /tmp/dbdeploy_deploy.sql"
+                        />
+            </then>
+            <else>
+                <exec command="mysql -u${db.user} -h${db.host} -p${db.password} ${db.name} &lt; /tmp/dbdeploy_deploy.sql"
+                        />
+            </else>
+        </if>
+        <delete file="/tmp/dbdeploy_deploy.sql" />
+    </target>
 </project>
