--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     }
   },
   "require": {
-    "doctrine/orm": "^2.5"
+    "doctrine/orm": "^2.5",
+    "continuousphp/aws-sdk-phing": "^0.1.5"
   }
 }
