--- a/build.xml
+++ b/build.xml
@@ -6,6 +6,23 @@
         </then>
     </if>
     <property file="${project.basedir}/build.properties" />
+
+    <import file="${project.basedir}/vendor/continuousphp/aws-sdk-phing/tasks.xml"/>
+
+    <target name="setup-aws">
+        <aws-config region="${aws.region}" prof="${aws.profile}"/>
+    </target>
+
+    <target name="run-stack" depends="setup-aws">
+        <aws-cf-runstack
+            name="training${cf.stackName}"
+            updateOnConflict="true"
+            capabilities="CAPABILITY_IAM"
+            templatePath="./infra/single-server-template">
+            <param name="keyName" value="${cf.keyName}"/>
+            <param name="env" value="${cf.stackName}"/>
+        </aws-cf-runstack>
+    </target>
     
     <target name="help" description="List available targets">
         <exec executable="${project.basedir}/vendor/bin/phing"
