--- a/build.xml
+++ b/build.xml
@@ -9,19 +9,43 @@
     
     <import file="${project.basedir}/vendor/continuousphp/aws-sdk-phing/tasks.xml" />
 
+    <if>
+        <isset property="continuousphp.pr" />
+        <then>
+            <echo message="Switching to PR stack" />
+            <property name="cf.filteredStackName"
+                      value="${cf.stackName}-${continuousphp.pr}" />
+        </then>
+        <else>
+            <property name="cf.filteredStackName"
+                      value="${cf.stackName}" />
+        </else>
+    </if>
+
     <target name="setup-aws">
         <aws-config region="${aws.region}" profile="${aws.profile}" />
     </target>
 
     <target name="run-stack" depends="setup-aws">
         <aws-cf-runstack
-                name="training${cf.stackName}"
+                name="training${cf.filteredStackName}"
                 updateOnConflict="true"
                 capabilities="CAPABILITY_IAM"
                 templatePath="./infra/single-server.template">
             <param name="KeyName" value="${cf.KeyName}" />
-            <param name="env" value="${cf.stackName}" />
+            <param name="env" value="${cf.filteredStackName}" />
         </aws-cf-runstack>
+    </target>
+
+    <target name="setup-deployment-group">
+        <aws-deploy-deployment-group
+                name="${cf.filteredStackName}"
+                updateOnConflict="true"
+                deploymentConfigName="CodeDeployDefault.OneAtATime"
+                serviceRole="${deploy.serviceRole}"
+                application="${deploy.applicationName}">
+            <ec2TagFilter key="env" value="${cf.filteredStackName}" />
+        </aws-deploy-deployment-group>
     </target>
 
     <target name="help" description="List available targets">
