--- a/build.xml
+++ b/build.xml
@@ -24,6 +24,18 @@
             <param name="env" value="${cf.stackName}" />
         </aws-cf-runstack>
     </target>
+
+    <!-- lie le service de déploiement à la machine -->
+    <target name="setup-deployment-group">
+        <aws-deploy-deployment-group
+            name="${cf.filteredStackName}"
+            updateOnConflict="true"
+            deploymentConfigName="CodeDeployDefault.OneAtATime"
+            serviceRole="${deploy.serviceRole}"
+            application="${deploy.applicationName}">
+            <ec2TagFilter key="env" value="${cf.filteredStackName}" />
+        </aws-deploy-deployment-group>
+    </target>
     
     <target name="help" description="List available targets">
         <exec executable="${project.basedir}/vendor/bin/phing"
