--- a/build.xml
+++ b/build.xml
@@ -9,6 +9,19 @@
 
     <import file="${project.basedir}/vendor/continuousphp/aws-sdk-phing/tasks.xml"/>
 
+    <if>
+        <isset property="continuousphp.pr" />
+        <then>
+            <echo message="Switching to PR stack" />
+            <property name="cf.filteredStackName"
+                      value="${cf.stackName}-${continuousphp.pr}" />
+        </then>
+        <else>
+            <property name="cf.filteredStackName"
+                      value="${cf.stackName}" />
+        </else>
+    </if>
+
     <!-- Initialisation comptr AWS -->
     <target name="setup-aws">
         <aws-config region="${aws.region}" profile="${aws.profile}" />
@@ -16,12 +29,12 @@
 
     <target name="run-stack" depends="setup-aws">
         <aws-cf-runstack
-            name="training${cf.stackName}"
+            name="training${cf.filteredStackName}"
             updateOnConflict="true"
             capabilities="CAPABILITY_IAM"
             templatePath="./infra/single-server.template">
             <param name="KeyName" value="${cf.KeyName}" />
-            <param name="env" value="${cf.stackName}" />
+            <param name="env" value="${cf.filteredStackName}" />
         </aws-cf-runstack>
     </target>
 
