--- a/appspec.yml
+++ b/appspec.yml
@@ -5,4 +5,4 @@ files:
     destination: /var/www/html
 hooks:
   BeforeInstall:
-    - location: script/cleanup.sh
+    - location: scripts/cleanup.sh
