--- a/config/autoload/orm.local.php.dist
+++ b/config/autoload/orm.local.php.dist
@@ -5,10 +5,10 @@ return [
             'orm_default' => [
                 'driverClass' => 'Doctrine\DBAL\Driver\PDOMySql\Driver',
                 'params' => [
-                    'host' => '@db.hosts',
-                    'user' =>'@db.username',
-                    'password' => '@db.password',
-                    'dbname' => '@db.dbname'
+                    'host' => 'localhost',
+                    'user' =>'root',
+                    'password' => '',
+                    'dbname' => 'skeleton'
                 ],
             ]
         ],
