--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
     "zendframework/zendframework": "~2.5",
     "doctrine/doctrine-orm-module": "~0.9.1",
     "doctrine/migrations": "~1.1",
-    "continuousphp/aws-sdk-phing": "~0.1"
+    "continuousphp/aws-sdk-phing": "~0.1",
+    "phpunit/phpunit": "^4.8"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.6",
     "squizlabs/php_codesniffer": "^2.3",
     "behat/behat": "^3.0",
     "behat/mink-extension": "~2.0",
